Added loops, finding matches

--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
 </head>
 <body>
     <h1>Blocket: <small><br/>Match the blocks to win!</small></h1>
-    <div class="game">
-        <div class="block" id="1" data-row='1' data-position='1'></div>
-        <div class="block" id="2" data-row='1' data-position='2'></div>
-        <div class="block" id="3" data-row='1' data-position='3'></div>
-        <div class="block" id="4" data-row='1' data-position='4'></div>
-        <div class="block" id="5" data-row='1' data-position='5'></div>
-        <div class="block" id="6" data-row='1' data-position='6'></div>
-        <div class="block" id="7" data-row='1' data-position='7'></div>
-        <div class="block" id="8" data-row='1' data-position='8'></div>
-        <div class="block" id="9" data-row='1' data-position='9'></div>
-        <div class="block" id="10" data-row='1' data-position='10'></div>
-        <div class="block" id="11" data-row='1' data-position='11'></div>
-        <div class="block" id="12" data-row='1' data-position='12'></div>
-    </div>
+    <div class="game"></div>
     <script src="script.js"></script>
 </body>
 </html>
