add blocks to game div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Blocket: <small><br/>Match the blocks to win!</small></h1>
-    <div class="game"></div>
+    <div class="game" id="game"></div>
     <script src="script.js"></script>
 </body>
 </html>
