--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Blocket: <small><br/>Match the blocks to win!</small></h1>
+    <div class="header"><h1>Blocket: <small><br/>Match the blocks to win!</small></h1></div>
+    <div class="score" id="score"><h2>Score: 0</h2></div>
     <div class="game" id="game"></div>
     <script src="script.js"></script>
 </body>
